production/k8s-production/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temporal-system
  labels:
    app.kubernetes.io/name: temporal-system
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: temporal-cloud
  labels:
    app.kubernetes.io/name: temporal-cloud
    environment: production
